fix: user card overflow

--- a/src/components/UserCard/UserCard.scss
+++ b/src/components/UserCard/UserCard.scss
@@ -33,5 +33,7 @@
   }
   .name {
     font-weight: 600;
+    width: 65%;
+    overflow: hidden;
   }
 }
